            - Added routine getSeifertStructure().
        Class NLensSpace:
            - Fixed bug causing reductions to be sometimes non-optimal
              (although still correct) - see modularInverse() notes below.
        Class NLocalFileResource:
            - Replaced static members MODE_READ, MODE_WRITE with static
              routines sysModeRead(), sysModeWrite().
        Class NNormalSurfaceList:
            - New nested class NNormalSurfaceList::SurfaceInserter.
        Class NPacket:
            - Added routines to support arbitrary packet tags.
            - Finally changed getPacketName() to getPacketTypeName().
            - Removed tidyReadPacket().
        Class NPerm:
            - Added isPermCode().
        Class NScript:
            - Changed list of variables to a proper map and removed routines
              getVariableIndex() and removeVariableAt().
            - Insistance on unique variable names; in enforcing this
              routine addVariable() now returns bool.
        Class NSignature, NSigCensus, NSigPartialIsomorphism:
            - Added.
        Class NTriangulation:
            - Uses NIndexedArrays for skeletal elements for fast index lookup.
        Class NXMLCallback, NXMLElementReader, NXMLPacketReader and subclasses:
            - Added.
        Class reference_wrapper, remove_pointer:
            - Added for use with Standard Template Library.
        Class select1st, select2nd, unary_compose:
            - Added for use with Standard Template Library.
        Class XMLParser, XMLParserCallback:
            - Added.
        Class ZBuffer, CompressionBuffer, DecompressionBuffer,
                CompressionStream, DecompressionStream:
            - Added.
        Routine basicTokenise(), duplicate(), valueOf():
            - Added.
        Routine modularInverse():
            - Fixed a rather nasty bug in gcdWithCoeffsInternal() that
              caused modularInverse() to sometimes give wrong answers.