@@ -12,16 +12,17 @@ Version 3.0  [ 28 June, 2002 ] - The "XML, about bloody time" release.
 
     - Moved from old impenetrable binary data files to new compressed
       XML data files.
-    - The Great STL Port: calculation engine completely reworked to use
-      and play well with the C++ Standard Template Library.  Also made
-      more standards-compliant (i.e., compiles under gcc3) and put in
-      its own namespace (regina).
     - Works with splitting surface signatures.
     - Yet more subcomplex recognition.
+    - Recognises thin edge links.
     - Supports arbitrary packet tags.
     - Optimisations for skeletal calculations in triangulations.
     - Introduced various command-line utility programs.
     - Reference manual expanded for normal surfaces and angle structures.
+    - The Great STL Port: calculation engine completely reworked to use
+      and play well with the C++ Standard Template Library.  Also made
+      more standards-compliant (i.e., compiles under gcc3) and put in
+      its own namespace (regina).
     - Removed CORBA engine/interface (see CHANGES.txt for why).
     - Happy birthday to me!
 
